--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
+  },
+ "resolutions": {
+    "eslint-plugin-react": "7.28.0"    
   }
 }
